--- a/package.xml
+++ b/package.xml
@@ -8,18 +8,19 @@
   <maintainer email="christian.wendt@eduart-robotik.com">user</maintainer>
   <license>BSD 3-Clause</license>
 
-  <depend>rclpy</depend>
+  <!-- <depend>rclpy</depend> -->
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>tf2</depend>
 
   <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
+  <!-- <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <test_depend>python3-pytest</test_depend> -->
 
   <export>
-    <build_type>ament_python</build_type>
+    <!-- <build_type>ament_python</build_type> -->
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
