Implement fleet control node.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 install(
-  TARGETS pose_controller
+  TARGETS pose_controller fleet_control_node twist_accumulator
   EXPORT export_${PROJECT_NAME}
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
