Add launch file arguments to fleet control test scenario.

--- a/parameter/eduard-green-fleet-drive-slave.yaml
+++ b/parameter/eduard-green-fleet-drive-slave.yaml
@@ -15,3 +15,8 @@
 
     use_sim_time: false
 
+/eduard/green/twist_accumulator:
+  ros__parameters:
+    num_subscription: 2
+    use_sim_time: false
+    
