Adapt parameter for fleet demo use case.

--- a/parameter/eduard-fleet-drive-master.yaml
+++ b/parameter/eduard-fleet-drive-master.yaml
@@ -11,10 +11,12 @@
 
     robot_1:
       d_x: -1.0
-      d_y:  0.5
+      d_y: -0.5
+      # d_yaw: -0.523598776 # 30°
       d_yaw: 0.0
 
     robot_2:
       d_x: -1.0
-      d_y: -0.5
+      d_y:  0.5
+      # d_yaw: 0.523598776 # 30°
       d_yaw: 0.0
