--- a/parameter/eduard-blue-fleet-drive-slave.yaml
+++ b/parameter/eduard-blue-fleet-drive-slave.yaml
@@ -11,7 +11,8 @@
     set_point:
       x: 2.0
       y: -0.5
-      yaw: 0.0
+      # yaw: -0.523598776 # 30°
+      yaw: 0.0    
 
     use_sim_time: false
 
