--- a/parameter/eduard-green-fleet-drive-slave.yaml
+++ b/parameter/eduard-green-fleet-drive-slave.yaml
@@ -1,22 +1,23 @@
-/eduard/green/pose_controller:
+/**:
   ros__parameters:
+    use_sim_time: false
     frame_robot: 'eduard/green/base_link'
+
     pid:
-      kd: 0.0
-      ki: 0.0
-      kp: -1.0
-      limit: 1.0
-      use_anti_windup: true
+      angular:
+        kd: 0.0
+        ki: 0.0
+        kp: -1.0
+        limit: 0.2
+        use_anti_windup: true
+      linear:
+        kd: 0.0
+        ki: 0.0
+        kp: -1.0
+        limit: 0.2
+        use_anti_windup: true
 
     set_point:
-      x: 1.0
-      y: 0.5
-      yaw: -0.523598776 # 30°
-
-    use_sim_time: false
-
-/eduard/green/twist_accumulator:
-  ros__parameters:
-    num_subscription: 2
-    use_sim_time: false
-    
+      x: 0.7
+      y: 0.0
+      yaw: 0.0
