--- a/parameter/eduard-green-fleet-drive-slave.yaml
+++ b/parameter/eduard-green-fleet-drive-slave.yaml
@@ -7,14 +7,16 @@
       angular:
         kd: 0.0
         ki: 0.0
-        kp: -1.0
+        kp: -2.0
         limit: 0.2
+        input_filter_weight: 0.5
         use_anti_windup: true
       linear:
         kd: 0.0
         ki: 0.0
-        kp: -1.0
-        limit: 0.2
+        kp: -5.0
+        limit: 0.5
+        input_filter_weight: 0.5
         use_anti_windup: true
 
     set_point:
