--- a/parameter/eduard-fleet-drive-master.yaml
+++ b/parameter/eduard-fleet-drive-master.yaml
@@ -5,14 +5,15 @@
     number_of_robots: 3
 
     robot_0:
-      d_x: 1.0
+      d_x: 0.35
       d_y: 0.0
       d_yaw: 0.0
 
     robot_1:
-      d_x: -1.0
+      d_x: -0.35
       d_y: -0.5
-      d_yaw: -0.523598776 # 30°
+      # d_yaw: -0.523598776 # 30°
+      d_yaw: 0.0
 
     robot_2:
       d_x: -1.0
