Fleet Control: implement getting of kinematic description.

--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>tf2</depend>
+  <depend>edu_robot</depend>
 
   <test_depend>ament_copyright</test_depend>
   <!-- <test_depend>ament_flake8</test_depend>
