--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>rclcpp</depend>
   <depend>tf2</depend>
   <depend>edu_robot</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <!-- <test_depend>ament_flake8</test_depend>
