--- a/docker/ipc127e/makefile
+++ b/docker/ipc127e/makefile
@@ -1,7 +1,8 @@
 current_dir = $(shell pwd)
 
 download-sources:
-	git clone --branch feature/fleet-demo-case https://github.com/EduArt-Robotik/edu_swarm.git
+	git clone --branch feature/fleet-demo-case git@github.com:EduArt-Robotik/edu_swarm.git
+	git clone --branch develop git@github.com:EduArt-Robotik/edu_robot.git
 
 build-docker:
 	docker build -t eduart-swarm-ipc127e:0.1.0 .
@@ -11,3 +12,4 @@ all: download-sources build-docker
 
 clean:
 	rm -rf edu_swarm
+	rm -rf edu_robot
