--- a/parameter/eduard-green-fleet-drive-slave.yaml
+++ b/parameter/eduard-green-fleet-drive-slave.yaml
@@ -2,7 +2,7 @@
   ros__parameters:
     use_sim_time: false
     frame_robot: 'eduard/green/base_link'
-    reference_robot_name: 'eduard/red'
+    reference_robot_name: 'eduard/blue'
     robot_name: 'eduard/green'
 
     pid:
