--- a/docker/ipc127e/makefile
+++ b/docker/ipc127e/makefile
@@ -2,7 +2,7 @@ current_dir = $(shell pwd)
 
 download-sources:
 	git clone --branch feature/fleet-demo-case git@github.com:EduArt-Robotik/edu_swarm.git
-	git clone --branch develop git@github.com:EduArt-Robotik/edu_robot.git
+	git clone --branch 0.2.1 git@github.com:EduArt-Robotik/edu_robot.git
 
 build-docker:
 	docker build -t eduart-swarm-ipc127e:0.1.0 .
