--- a/docker/eduart-swarm/Dockerfile
+++ b/docker/eduart-swarm/Dockerfile
@@ -13,3 +13,8 @@ COPY ./edu_swarm /home/$USER/ros/src/edu_swarm
 RUN source /opt/ros/$ROS_DISTRO/setup.bash \
     && source /home/$USER/.bashrc \
     && colcon build --symlink-install --executor sequential --event-handlers console_direct+ --cmake-args -DCMAKE_BUILD_TYPE=Release
+
+# add entry point
+COPY --chown=$USER ./entrypoint /home/$USER/
+RUN sudo chmod a+x /home/$USER/entrypoint
+ENTRYPOINT [ "/home/user/entrypoint" ]
