Estimate robot name from robot namespace. Add docker compose for slaves.

--- a/parameter/eduard-red-fleet-drive-slave.yaml
+++ b/parameter/eduard-red-fleet-drive-slave.yaml
@@ -1,9 +1,8 @@
 /**:
   ros__parameters:
     use_sim_time: false
-    frame_robot: 'eduard/red/base_link'
+    frame_robot: 'base_link'
     reference_robot_name: 'eduard/blue'
-    robot_name: 'eduard/red'
 
     pid:
       angular:
