--- a/docker/ie_app/eduard-green-fleet-slave.yaml
+++ b/docker/ie_app/eduard-green-fleet-slave.yaml
@@ -12,6 +12,8 @@ services:
     mem_limit: 300mb
     network_mode: "host"
     command: bash -c 'ros2 launch edu_swarm eduard-green-fleet-drive-slave.launch.py'
+    environment:
+        - EDU_ROBOT_NAMESPACE=eduard/green    
     networks:
         - proxy-redirect
         - zzz_layer2_net1
