--- a/parameter/eduard-fleet-drive-master.yaml
+++ b/parameter/eduard-fleet-drive-master.yaml
@@ -13,8 +13,11 @@
     robot_1:
       name: 'eduard/green'
       x: -0.35
-      y: 0.35
-      yaw: -0.523598776 # -30°
+      # y: 0.35
+      # yaw: -0.523598776 # -30°
+      y: 0.0
+      yaw: 0.0 # 0°
+
 
     robot_2:
       name: 'eduard/red'
