Store config for edu swarm edge application.

--- a/docker/eduart-swarm/Dockerfile
+++ b/docker/eduart-swarm/Dockerfile
@@ -16,5 +16,5 @@ RUN source /opt/ros/$ROS_DISTRO/setup.bash \
 
 # add entry point
 COPY --chown=$USER ./entrypoint /home/$USER/
-RUN sudo chmod a+x /home/$USER/entrypoint
+RUN chmod a+x /home/$USER/entrypoint
 ENTRYPOINT [ "/home/user/entrypoint" ]
