--- a/parameter/eduard-fleet-drive-master.yaml
+++ b/parameter/eduard-fleet-drive-master.yaml
@@ -12,15 +12,15 @@
 
     robot_1:
       name: 'eduard/green'
-      x: -0.3
-      # y: 0.35
-      # yaw: -0.523598776 # -30°
-      y: 0.0
-      yaw: 0.0 # 0°
+      x: -0.23
+      y: 0.28
+      yaw: -0.7378167 # -30°
+      # y: 0.0
+      # yaw: 0.0 # 0°
 
 
     robot_2:
       name: 'eduard/red'
-      x: -0.3
-      y:  -0.35
-      yaw: 0.523598776 # 30°
+      x: -0.23
+      y:  -0.28
+      yaw: 0.7378167 # 30°
