--- a/parameter/eduard-fleet-drive-master.yaml
+++ b/parameter/eduard-fleet-drive-master.yaml
@@ -6,24 +6,18 @@
 
     robot_0:
       name: 'eduard/blue'
-      x: 0.3
+      x: 0.4
       y: 0.0
       yaw: 0.0
 
     robot_1:
       name: 'eduard/green'
-      # x: -0.23
-      x: -0.3
-      # yaw: -0.7378167 # -30°
-      y: 0.0
-      yaw: 0.0 # 0°
-
+      x: -0.30
+      y:  0.34
+      yaw: -0.671951762 #
 
     robot_2:
       name: 'eduard/red'
-      x: -0.28
-      y:  -0.38
-      yaw: 0.7378167 # 30°
-      # x: -0.3
-      # y: 0.0
-      # yaw: 0.0
+      x: -0.30
+      y:  -0.34
+      yaw: 0.671951762 # 30°
