--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 ament_add_gtest(test_kalman_filter
   unittest_observation_matrix.cpp
   unittest_attribute_vector.cpp
+  unittest_sensor_model.cpp
 )
 target_include_directories(test_kalman_filter PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -8,4 +9,5 @@ target_include_directories(test_kalman_filter PUBLIC
 )
 target_link_libraries(test_kalman_filter
   eduart-fleet-kalman-filter
+  eduart-fleet-sensor-model
 )
