Implement unit test for Kalman filter model mecanum.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -2,6 +2,7 @@ ament_add_gtest(test_kalman_filter
   unittest_observation_matrix.cpp
   unittest_attribute_vector.cpp
   unittest_sensor_model.cpp
+  unittest_kalman_filter_model_mecanum.cpp
 )
 target_include_directories(test_kalman_filter PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
