--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,6 +3,7 @@ ament_add_gtest(test_kalman_filter
   unittest_attribute_vector.cpp
   unittest_sensor_model.cpp
   unittest_kalman_filter_model_mecanum.cpp
+  unittest_extended_kalman_filter.cpp
 )
 target_include_directories(test_kalman_filter PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
