--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>tf2</depend>
   <depend>edu_robot</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_srvs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <!-- <test_depend>ament_flake8</test_depend>
