--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_srvs</depend>
   <depend>visualization_msgs</depend>
+  <depend>laser_geometry</depend>
 
   <test_depend>ament_copyright</test_depend>
   <!-- <test_depend>ament_flake8</test_depend>
