Integrate sick localization into docker image.

--- a/docker/image/makefile
+++ b/docker/image/makefile
@@ -2,6 +2,7 @@ image_name = eduart-fleet:0.3.0
 
 download-sources:
 	git clone --branch 0.3.0 git@github.com:EduArt-Robotik/edu_swarm.git
+	git clone --branch master https://github.com/SICKAG/sick_lidar_localization.git	
 
 build-docker:
 	docker build -t $(image_name) .
@@ -18,3 +19,4 @@ all: download-sources build-docker
 
 clean:
 	rm -rf edu_swarm
+	rm -rf sick_lidar_localization
