Sick Line Navigation: * add parameter handling * add launch content for docker

--- a/docker/sick_line_navigation_on_iot2050/docker-compose.yaml
+++ b/docker/sick_line_navigation_on_iot2050/docker-compose.yaml
@@ -15,6 +15,6 @@ services:
             - RMW_IMPLEMENTATION=${RMW_IMPLEMENTATION}
             - CYCLONEDDS_URI=/home/user/ros/launch_content/cyclone_profile.xml         
         network_mode: "host"
-        command: bash -c 'cd /home/user/ros/launch_content; ros2 launch edu_fleet sick-line-navigation.launch.py'
+        command: bash -c 'cd /home/user/ros/launch_content; ros2 launch sick-line-navigation.launch.py'
         volumes:
             - './launch_content:/home/user/ros/launch_content:r'
