--- a/docker/sick_line_navigation_on_iot2050/launch_content/sick_line_navigation.yaml
+++ b/docker/sick_line_navigation_on_iot2050/launch_content/sick_line_navigation.yaml
@@ -5,4 +5,6 @@
     use_sim_time: false
 
     # movement velocity along the track
-    move_velocity: 0.2
+    move_velocity:
+      fast: 0.5
+      slow: 0.10000000149011612
