Make sick related nodes optional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,17 +58,27 @@ install(
     parameter
   DESTINATION share/${PROJECT_NAME}
 )
+
+set(TARGET_NODE_LIST
+  pose_controller
+  fleet_control_node
+  twist_accumulator
+  fleet_localization_node
+  robot_localization_node
+  collision_avoidance_lidar_node
+)
+if (${sick_lidar_localization_FOUND})
+  set(TARGET_NODE_LIST
+    ${TARGET_NODE_LIST}
+    sick_line_controller_node
+    sick_line_navigation_node    
+  )
+endif()
+
 install(
   TARGETS
     # nodes
-    pose_controller
-    fleet_control_node
-    twist_accumulator
-    fleet_localization_node
-    robot_localization_node
-    sick_line_controller_node
-    sick_line_navigation_node
-    collision_avoidance_lidar_node
+    ${TARGET_NODE_LIST}
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
