IoTBot: add loading of environment file for systemd service.

--- a/docker/sick_line_navigation_on_iot2050/iot2050-sick-line-navigation.service
+++ b/docker/sick_line_navigation_on_iot2050/iot2050-sick-line-navigation.service
@@ -4,6 +4,7 @@ PartOf=docker.service
 After=docker.service
 
 [Service]
+EnvironmentFile=/etc/environment
 Type=oneshot
 RemainAfterExit=yes
 # first stop and remove already running container
