--- a/docker/sick_line_navigation_on_iot2050/launch_content/sick_line_navigation.yaml
+++ b/docker/sick_line_navigation_on_iot2050/launch_content/sick_line_navigation.yaml
@@ -6,5 +6,10 @@
 
     # movement velocity along the track
     move_velocity:
-      fast: 0.5
-      slow: 0.10000000149011612
+      fast: 0.50
+      middle: 0.30
+      slow: 0.15
+
+    # stop/halt time when triggered by marker
+    stop_time: 5.0
+    
