--- a/docker/sick_line_navigation_on_iot2050/launch_content/sick_lidar_custom_reader.yaml
+++ b/docker/sick_line_navigation_on_iot2050/launch_content/sick_lidar_custom_reader.yaml
@@ -5,12 +5,8 @@
     use_sim_time: false
 
     # Field definitions
-    field_index:
-      - 0
-      - 2
-    field_name:
-      - warnfeld
-      - schutzfeld
+    field_index: [        2,           0]
+    field_name:  [ warnfeld, schutzfeld ]
 
     # Lidar Connection
     lidar_ip_address: 192.168.0.70
