--- a/docker/sick_line_navigation_on_iot2050/docker-compose.yaml
+++ b/docker/sick_line_navigation_on_iot2050/docker-compose.yaml
@@ -18,3 +18,20 @@ services:
         command: bash -c 'cd /home/user/ros/launch_content; ros2 launch sick-line-navigation.launch.py'
         volumes:
             - './launch_content:/home/user/ros/launch_content:r'
+
+    sick-lidar-custom-reader:
+        image: eduartrobotik/eduart-perception:0.4.1
+        container_name: sick-lidar-custom-reader-0.4.1
+        user: root
+        restart: always
+        privileged: true
+        ipc: host
+        pid: host
+        environment:
+            - EDU_ROBOT_NAMESPACE=${EDU_ROBOT_NAMESPACE}
+            - RMW_IMPLEMENTATION=${RMW_IMPLEMENTATION}
+            - CYCLONEDDS_URI=/home/user/ros/launch_content/cyclone_profile.xml         
+        network_mode: "host"
+        command: bash -c 'cd /home/user/ros/launch_content; ros2 launch sick_lidar_custom_reader.launch.py'
+        volumes:
+            - './launch_content:/home/user/ros/launch_content:r'
